<resources>
    <string name="app_name">To Do App</string>
    <string name="group_name">Developed by Mobile_XD group</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="registration">I’m a new user. Registration</string>
    <string name="login">I have registered before. Login</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing, lorem ipsum dolorsed diam nonumy amet eirmod.</string>
    <string name="example_email">example@gmail.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="email_or_username">Email or Username</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="finance">Finance</string>
    <string name="to_do_list">ToDo List</string>
    <string name="to_do">ToDo</string>
    <string name="register_to">Register to\nOrganize Pro</string>
    <string name="login_to">Login to \nOrganize Pro</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="account">Account</string>
    <string name="edit">Edit</string>
    <string name="save_changes">Save Changes</string>
    <string name="clear_all_financial_transactions">Clear all financial transactions</string>
    <string name="clear_all_to_dos">Clear all to-dos</string>
    <string name="log_out">Log out of profile</string>
    <string name="v_1_0_0">v.1.0.0</string>
    <string name="card_number">Card number</string>
    <string name="card_data">Validity period</string>
    <string name="card_name">Card name</string>
    <string name="card_balance">Card Balance - UZS</string>
    <string name="create_a_card">Create a card</string>
    <string name="card_registration">Card registration</string>
    <string name="event">Event</string>
    <string name="event_cost">Event cost</string>
    <string name="export">Export</string>
    <string name="_import">Import</string>
    <string name="save">Save</string>
    <string name="event_name">Event name</string>
    <string name="delete_all_cards">Delete all cards</string>
    <string name="edit_card">Edit card</string>
    <string name="delete_card">Delete</string>
    <string name="all">All</string>
    <string name="test"><del>Test</del></string>
</resources>