<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/calendarFragment"
        android:title="@string/calendar"
        android:icon="@drawable/ic_calendar"
        android:checked="true"
        />

    <item
        android:id="@+id/toDoListFragment"
        android:title="@string/to_do_list"
        android:icon="@drawable/ic_to_do"
        android:checked="true"
        />

    <item
        android:id="@+id/financeFragment"
        android:title="@string/finance"
        android:icon="@drawable/ic_finance"
        android:checked="true"
        />

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        android:checked="true"
        />

</menu>