<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="12dp"
    android:background="@color/text_hint_color"
    android:padding="12dp">

    <TextView
        android:id="@+id/card_registration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/card_registration"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_registration_tv"
        android:layout_marginHorizontal="4dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="8dp">

        <EditText
            android:id="@+id/dialog_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/inter"
            android:hint="@string/card_number"
            android:inputType="number"
            android:maxLength="19"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColor="@color/text_color"
            android:textSize="16sp" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card1"
        android:layout_marginHorizontal="4dp"
        android:layout_toStartOf="@+id/card3"
        app:cardCornerRadius="8dp">

        <EditText
            android:id="@+id/dialog_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/inter"
            android:hint="@string/card_name"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColor="@color/text_color"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card1"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="4dp"
        app:cardCornerRadius="8dp">

        <EditText
            android:id="@+id/dialog_card_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:hint="@string/card_data"
            android:inputType="date"
            android:maxLength="5"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColor="@color/text_color"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card3"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="8dp">

        <EditText
            android:id="@+id/dialog_card_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/inter"
            android:hint="@string/card_balance"
            android:inputType="numberDecimal"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColor="@color/text_color"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/dialog_create_card_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card4"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/button_edit"
        android:text="@string/create_a_card"
        app:backgroundTint="@null" />

</RelativeLayout>