<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/art_board_background"
    tools:context=".fragments.main_fragments.FinanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:layout_height="?attr/actionBarSize"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/finance"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:fontFamily="@font/inter_semi_bold"
            />
        <ImageView
            android:id="@+id/finance_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:src="@drawable/ic_card"/>
        <ImageView
            android:id="@+id/add_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus"/>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:id="@+id/button_week"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@color/text_filter_button"
            android:textStyle="bold"
            android:background="@drawable/button_background_filter"
            android:text="@string/week"
            android:gravity="center"
            android:layout_marginHorizontal="12dp"
            />
        <RadioButton
            android:id="@+id/button_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background_filter"
            android:button="@null"
            android:textColor="@color/text_filter_button"
            android:textStyle="bold"
            android:text="@string/month"
            android:gravity="center"
            android:layout_marginHorizontal="12dp"
            />
        <RadioButton
            android:id="@+id/button_year"
            android:layout_width="0dp"
            android:textColor="@color/text_filter_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:textStyle="bold"
            android:background="@drawable/button_background_filter"
            android:text="@string/year"
            android:gravity="center"
            android:layout_marginHorizontal="12dp"
            />

    </RadioGroup>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/finance_view_pager2"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_height="250dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_finance"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/finance_recycler_view"
        />
</LinearLayout>