<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/art_board_background"
    tools:context=".fragments.SignInFragment">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/inter"
        android:text="@string/login_to"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/inter"
        android:text="@string/lorem"
        android:textColor="@color/text_hint_color" />


    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/inter"
            android:text="@string/username"
            android:textColor="@color/text_hint_color" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="12dp">

            <EditText
                android:id="@+id/sign_in_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/inter"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColor="@color/text_color"
                android:textSize="16sp" />


        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/inter"
            android:text="@string/password"
            android:textColor="@color/text_hint_color" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="12dp">

            <EditText
                android:id="@+id/sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/inter"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:textColor="@color/text_color"
                android:textSize="16sp" />


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="10dp"
            android:gravity="center_vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/view_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:fontFamily="@font/inter"
                android:includeFontPadding="false"
                android:text="or"
                android:textColor="@color/text_color" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/view_color" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/layout"
        android:layout_marginHorizontal="14dp"
        android:layout_marginVertical="10dp">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:backgroundTint="@color/apple_button_color"
            android:src="@drawable/ic_icon_apple" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:backgroundTint="@color/facebook_button_color"
            android:src="@drawable/ic_icon_facebook" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:backgroundTint="@color/twitter_button_color"
            android:src="@drawable/ic_icon_twitter" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_layout"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/inter"
        android:text="@string/forgot_password"
        android:textColor="@color/text_hint_color" />


    <TextView
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/inter"
        android:text="@string/registration"
        android:textColor="@color/text_hint_color" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/registration_button"
        android:layout_marginHorizontal="14dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/inter"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null" />


</RelativeLayout>